--- a/chart7/json/main/db_config.json
+++ b/chart7/json/main/db_config.json
@@ -1,8 +1,8 @@
 {
   "database": {
-    "host": "localhost",
-    "password": "12345"
-  },
-  "host": "localhost",
-  "port": "8080"
+    "host": "192.168.1.88",
+    "password": "12345",
+    "username": "crm",
+    "port": "16633"
+  }
 }
